--- a/404.html
+++ b/404.html
@@ -10,10 +10,12 @@ description:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>Page not found.</h1>
-        <h4>You’ve gone off the Rails!</h4>
+        <h4>You've gone off the Rails!</h4>
       </div>
       <div class="heading__button">
-        <a href="/" class="common-button common-button--text common-button--icon-arrow"><span>Go back home</span></a>
+        <a href="/" class="common-button common-button--text common-button--icon-arrow">
+          <span>Go back home</span>
+        </a>
       </div>
     </div>
   </div>
