--- a/_pages/conduct.html
+++ b/_pages/conduct.html
@@ -11,7 +11,9 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>Code of Conduct.</h1>
-        <h4>Rails is committed to fostering a welcoming community. If you encounter any unacceptable behavior, follow these steps to report the issue to the Core team. <strong>We are here to help.</strong></h4>
+        <h4>Rails is committed to fostering a welcoming community. If you encounter any unacceptable behavior, follow these steps to report the issue to the Core team.
+          <strong>We are here to help.</strong>
+        </h4>
       </div>
     </div>
   </div>
@@ -38,7 +40,7 @@ redirect_from:
           <li>The use of sexualized language or imagery and unwelcome sexual attention or advances</li>
           <li>Trolling, insulting/derogatory comments, and personal or political attacks</li>
           <li>Public or private harassment</li>
-          <li>Publishing others’ private information, such as a physical or electronic address, without explicit permission</li>
+          <li>Publishing others' private information, such as a physical or electronic address, without explicit permission</li>
           <li>Other conduct which could reasonably be considered inappropriate in a professional setting</li>
         </ul>
         <hr class="divider" />
@@ -50,12 +52,16 @@ redirect_from:
         <p>This Code of Conduct applies both within project spaces and in public spaces when an individual is representing the project or its community. Examples of representing a project or community include using an official project e-mail address, posting via an official social media account, or acting as an appointed representative at an online or offline event. Representation of a project may be further defined and clarified by project maintainers.</p>
         <hr class="divider" />
         <h3>Enforcement</h3>
-        <p>Instances of abusive, harassing, or otherwise unacceptable behaviour may be reported by contacting the project team at <a href="mailto:conduct@rubyonrails.org">conduct@rubyonrails.org</a>. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident. Further details of specific enforcement policies may be posted separately.</p>
-        <p>Project maintainers who do not follow or enforce the Code of Conduct in good faith may face temporary or permanent repercussions as determined by other members of the project’s leadership.</p>
+        <p>Instances of abusive, harassing, or otherwise unacceptable behaviour may be reported by contacting the project team at
+          <a href="mailto:conduct@rubyonrails.org">conduct@rubyonrails.org</a>. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident. Further details of specific enforcement policies may be posted separately.</p>
+        <p>Project maintainers who do not follow or enforce the Code of Conduct in good faith may face temporary or permanent repercussions as determined by other members of the project's leadership.</p>
         <hr class="divider" />
         <h3>Attribution</h3>
-        <p>This Code of Conduct is adapted from the <a href="https://contributor-covenant.org">Contributor Covenant</a>, version 1.4, available at <a href="https://contributor-covenant.org/version/1/4">https://contributor-covenant.org/version/1/4</a>.</p>
-        <p>For a history of updates and revisions to this policy, see the <a href="https://github.com/rails/website/commits/main/_pages/conduct.html">page history</a>.</p>
+        <p>This Code of Conduct is adapted from the
+          <a href="https://contributor-covenant.org">Contributor Covenant</a>, version 1.4, available at
+          <a href="https://contributor-covenant.org/version/1/4">https://contributor-covenant.org/version/1/4</a>.</p>
+        <p>For a history of updates and revisions to this policy, see the
+          <a href="https://github.com/rails/website/commits/main/_pages/conduct.html">page history</a>.</p>
       </div>
     </div>
   </div>
