--- a/_pages/features.html
+++ b/_pages/features.html
@@ -12,7 +12,7 @@ published: false
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>Everything you need.</h1>
-        <h4><strong>Rails is not a minimalist framework.</strong> It’s a metropolis filled with all of the major pieces to run a large, sprawling app.</h4>
+        <h4><strong>Rails is not a minimalist framework.</strong> It's a metropolis filled with all of the major pieces to run a large, sprawling app.</h4>
       </div>
     </div>
   </div>
@@ -35,7 +35,7 @@ published: false
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block features__block--code">
 {% highlight ruby %}
@@ -65,7 +65,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -84,7 +84,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -96,7 +96,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Example feature label</h6>
@@ -115,7 +115,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -127,7 +127,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Example feature label</h6>
@@ -155,7 +155,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -171,7 +171,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -198,7 +198,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Example feature label</h6>
@@ -217,7 +217,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -229,7 +229,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Example feature label</h6>
@@ -256,7 +256,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -268,7 +268,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Example feature label</h6>
@@ -287,7 +287,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -299,7 +299,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Example feature label</h6>
@@ -318,7 +318,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Another feature example</h6>
@@ -330,7 +330,7 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         </div>
         <div class="features__block">
           <h6>One more feature</h6>
-          <p>That’s the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
+          <p>That's the framework for talking to the database. The controller is handled by Action Controller and the view by Action View, together as Action Pack.</p>
         </div>
         <div class="features__block">
           <h6>Example feature label</h6>
