--- a/_pages/trademarks.html
+++ b/_pages/trademarks.html
@@ -20,9 +20,15 @@ redirect_from:
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
-        <p><strong>“Rails”</strong>, <strong>“Ruby on Rails”</strong>, and the <strong>Rails logo</strong> are registered trademarks of <strong>David Heinemeier Hansson</strong>, but are under exclusive license to <a href="/foundation">The Rails Foundation</a>, which is responsible for administering their use and permission.
-          
-          You may not use these trademarks in a commercial setting to imply that your product or service is endorsed or associated with Ruby on Rails without permission. You may use these marks to refer to Ruby on Rails in a way where it’s clear that you’re simply referring to the project, not claiming endorsement or association.</p>
+        <p>
+          <strong>“Rails”</strong>,
+          <strong>“Ruby on Rails”</strong>, and the
+          <strong>Rails logo</strong>
+          are registered trademarks of
+          <strong>David Heinemeier Hansson</strong>, but are under exclusive license to
+          <a href="/foundation">The Rails Foundation</a>, which is responsible for administering their use and permission. 
+
+          You may not use these trademarks in a commercial setting to imply that your product or service is endorsed or associated with Ruby on Rails without permission. You may use these marks to refer to Ruby on Rails in a way where it's clear that you're simply referring to the project, not claiming endorsement or association.</p>
       </div>
     </div>
   </div>
@@ -41,13 +47,16 @@ redirect_from:
         <ul>
           <li>Selling merchandise (stickers, t-shirts, mugs, etc).</li>
           <li>Use of the Rails logo on a book cover.</li>
-          <li>Products like the <a href="https://web.archive.org/web/20151116162843/http://www.goldieblox.com/products/ruby-rails-skydive-action-figure">Ruby Rails</a> doll.</li>
+          <li>Products like the
+            <a href="https://web.archive.org/web/20151116162843/http://www.goldieblox.com/products/ruby-rails-skydive-action-figure">Ruby Rails</a>
+            doll.</li>
         </ul>
         <h6>Examples of use that will not get permission:</h6>
         <ul>
           <li>Naming your company or product after Ruby on Rails, like “The Rails Consultants” or “The Rails Web Server”.</li>
         </ul>
-        <p>You can request permission by emailing <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a>.</p>
+        <p>You can request permission by emailing
+          <a href="mailto:foundation@rubyonrails.org">foundation@rubyonrails.org</a>.</p>
       </div>
     </div>
   </div>
