--- a/_pages/maintenance.html
+++ b/_pages/maintenance.html
@@ -11,7 +11,9 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>Maintenance policy.</h1>
-        <h4><strong>Support is divided into four groups:</strong> new features, bug fixes, security issues, and severe security issues.</h4>
+        <h4>
+          <strong>Support is divided into four groups:</strong>
+          new features, bug fixes, security issues, and severe security issues.</h4>
       </div>
     </div>
   </div>
@@ -23,9 +25,18 @@ redirect_from:
       <div class="text__content common-content">
         <h3>XYZ Formatting</h3>
         <ul>
-          <li><strong>Major X: </strong> New features, will likely contain API changes. The difference between Rails’ minor and major releases is the magnitude of breaking changes, and usually reserved for special occasions.</li>
-          <li><strong>Minor Y: </strong> New features, may contain API changes. Breaking changes are paired with deprecation notices in the previous minor or major release.</li>
-          <li><strong>Patch Z: </strong> Only bug fixes, no API changes, no new features. Except as necessary for security fixes.</li>
+          <li>
+            <strong>Major X:
+            </strong>
+            New features, will likely contain API changes. The difference between Rails' minor and major releases is the magnitude of breaking changes, and usually reserved for special occasions.</li>
+          <li>
+            <strong>Minor Y:
+            </strong>
+            New features, may contain API changes. Breaking changes are paired with deprecation notices in the previous minor or major release.</li>
+          <li>
+            <strong>Patch Z:
+            </strong>
+            Only bug fixes, no API changes, no new features. Except as necessary for security fixes.</li>
         </ul>
         <hr class="divider" />
         <h3>New Features</h3>
@@ -33,14 +44,20 @@ redirect_from:
         <hr class="divider" />
         <h3>Bug Fixes</h3>
         <p>Only the latest release series will receive bug fixes. Bug fixes are typically added to the main branch, and backported to the x-y-stable branch of the latest release series if there is sufficient need. When enough bugs fixes have been added to an x-y-stable branch, a new patch release is built from it. For example, a theoretical 1.2.2 patch release would be built from the 1-2-stable branch.</p>
-        <p>In special situations, where someone from the <a href="/community#core">Rails core team</a> agrees to support more series, they are included in the list of supported series.</p>
-        <p><strong>Currently included series:</strong> 7.0.Z.</p>
+        <p>In special situations, where someone from the
+          <a href="/community#core">Rails core team</a>
+          agrees to support more series, they are included in the list of supported series.</p>
+        <p>
+          <strong>Currently included series:</strong>
+          7.0.Z.</p>
         <hr class="divider" />
         <h3>Security Issues</h3>
-        <p>See the <a href="/security">Security policy</a> for more details.</p>
+        <p>See the
+          <a href="/security">Security policy</a>
+          for more details.</p>
         <hr class="divider" />
         <h3>Unsupported Release Series</h3>
-        <p>When a release series is no longer supported, it’s your own responsibility to deal with bugs and security issues. We may provide backports of the fixes and publish them to git, however there will be no new versions released. If you are not comfortable maintaining your own versions, you should upgrade to a supported version.</p>
+        <p>When a release series is no longer supported, it's your own responsibility to deal with bugs and security issues. We may provide backports of the fixes and publish them to git, however there will be no new versions released. If you are not comfortable maintaining your own versions, you should upgrade to a supported version.</p>
       </div>
     </div>
   </div>
