--- a/_pages/privacy.html
+++ b/_pages/privacy.html
@@ -22,7 +22,7 @@ redirect_from:
     <div class="text__body">
       <div class="text__content common-content">
         <h3>So, who's responsible for your personal information?</h3>
-        <p>That's us – the Rails Foundation (the data controller). We control, manage, and decide how we use your personal information as part of our business activities.</p> 
+        <p>That's us – the Rails Foundation (the data controller). We control, manage, and decide how we use your personal information as part of our business activities.</p>
 
         <p>If you choose to provide your personal information to other parties during an event organized by the Rails Foundation, including sponsors, then their data privacy policies apply to the data that you give to them.</p>
 
@@ -30,7 +30,7 @@ redirect_from:
 
         <hr class="divider" />
 
-        <h3>What kind of personal information do we collect?</h3> 
+        <h3>What kind of personal information do we collect?</h3>
 
         <p>It includes but is not limited to your full name, email address, contact information, company/organization info, photos and biographies (for conference speakers), contact preference information, dietary preferences, and any other information related to you or anyone else you may provide to us. If you provide us with information about a third party, you must have their consent to share it and let them know about this privacy policy.</p>
 
@@ -39,7 +39,7 @@ redirect_from:
         <h3>Use of third party services.</h3>
         <p>The Rails Foundation uses some third-party services like Basecamp, Hey, and Tito for project management, email services, and Rails World registration (respectively).</p>
 
-        <p>If their privacy policy is more restrictive than ours, we'll follow their terms. 
+        <p>If their privacy policy is more restrictive than ours, we'll follow their terms.
         Read more about their policies here:
         <ul>
         <li><a href="https://basecamp.com/about/policies/privacy">Basecamp</a></li>
@@ -66,7 +66,7 @@ redirect_from:
 
         <p>Using Plausible Analytics ensures that all site measurements are carried out anonymousl, and only the most essential data points are measured, and nothing else.</p>
 
-        <p>Read Plausible’s data policy <a href="https://plausible.io/data-policy">here</a>.</p>
+        <p>Read Plausible's data policy <a href="https://plausible.io/data-policy">here</a>.</p>
 
         <h5>Speaker or author information.</h5>
         <p>If you choose to author a written resource, including a mailing list post, blog post, or guide, or if you choose to speak at Rails World (both live and recorded for further broadcasting), you may be required to provide minimal biographical information or links to your social network or GitHub account to associate with your presentation or materials. As part of your agreement to participate, you acknowledge and agree that this information will remain publicly available for purposes of proper attribution of your work and maintenance of the historical record.</p>
@@ -89,7 +89,7 @@ redirect_from:
             <li>To protect and enforce our legal rights.</li>
         </ul>
 
-        <p>We only collect and use your personal information for legitimate business purposes, or to perform a contract between you and us. We may ask for your consent in certain circumstances where applicable law requires it.</p> 
+        <p>We only collect and use your personal information for legitimate business purposes, or to perform a contract between you and us. We may ask for your consent in certain circumstances where applicable law requires it.</p>
 
         <hr class="divider" />
         <h3>Who do we share your personal information with?</h3>
@@ -101,7 +101,7 @@ redirect_from:
         <h3>Transfer of personal information across borders.</h3>
         <p>The Rails Foundation is a US-based organization, but we work with third-party service providers and employees both in the United States and in other countries to provide our services to you. This means that your personal information may be transferred from one country to another.</p>
 
-        <p>It's important to note that the laws and regulations around privacy and data protection can be different in different countries. This means that the overseas entities that we share your information with may not be subject to the same laws as your country of residence or employment. Where we transfer information outside of the European Economic Areas, we will implement appropriate measures to ensure that your personal information remains protected and secure in accordance with applicable data protection laws. Where our third-party service providers process personal data outside the European Economic Area in the course of providing services to us, our written agreement with them will include appropriate measures, usually EU standard contractual clauses (as contemplated by Article 46(2) of the European Union’s General Data Protection Regulation).</p>
+        <p>It's important to note that the laws and regulations around privacy and data protection can be different in different countries. This means that the overseas entities that we share your information with may not be subject to the same laws as your country of residence or employment. Where we transfer information outside of the European Economic Areas, we will implement appropriate measures to ensure that your personal information remains protected and secure in accordance with applicable data protection laws. Where our third-party service providers process personal data outside the European Economic Area in the course of providing services to us, our written agreement with them will include appropriate measures, usually EU standard contractual clauses (as contemplated by Article 46(2) of the European Union's General Data Protection Regulation).</p>
 
         <p>Once we receive your personal information, we use appropriate security features to prevent unauthorized access. If you have any concerns or questions about how we protect your personal information, please don't hesitate to get in touch with us (see the section below titled "Contacting the Rails Foundation with Questions, Concerns, or Complaints").</p>
 
