--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -14,11 +14,18 @@ redirect_from:
       <div class="heading__content heading__content--has-headline common-content">
         <dl>
           <dt>David Heinemeier Hansson</dt>
-          <dd>翻譯 <a href="https://github.com/juanitofatas">Juanito Fatas</a>, <a href="https://github.com/wildjcrt">wildjcrt</a></dd>
+          <dd>翻譯
+            <a href="https://github.com/juanitofatas">Juanito Fatas</a>,
+            <a href="https://github.com/wildjcrt">wildjcrt</a>
+          </dd>
         </dl>
       </div>
       <div class="language">
-        <input class="language__checkbox" id="language__checkbox" type="checkbox" role="button" />
+        <input
+          class="language__checkbox"
+          id="language__checkbox"
+          type="checkbox"
+          role="button" />
         <label class="language__toggle" for="language__checkbox">
           <span>繁體中文</span>
         </label>
@@ -75,8 +82,8 @@ redirect_from:
         <p>當我說 Ruby 改變了我，我真的不誇張，Ruby 決定了我人生的努力目標。如此深刻的啟示。Ruby 感染了我，呼喚我對 Matz 的產物做出宣教的工作。傳播這深刻的語言與恩賜。</p>
         <p>我想你們現在大概都感到疑惑的搖搖頭。我不怪你們。要我還處於「程式設計只不過是工具」的階段，要有人跟我說上面這樣的經歷，我也會搖頭。但接著我可能會對這宗教般的語言發笑。但說實在的，這也是最真誠的理由，即便這可能使某些人，甚至是多數的人感到不愉快。</p>
         <p>無論如何，究竟這對 Rails 意味著什麼？這個理念為什麼持續引導 Rails 演進？要回答這個問題，我想用另一個啟發性的理念來說明，一個早期常用來描述 Ruby 的理念：最小驚訝原則（The Principle of Least Surprise）。Ruby 應該要如你預期般的運行。可以用下面這個對比於 Python 的例子來解釋：</p>
-{% highlight ruby %}
-$ irb
+        {% highlight ruby %}
+          $ irb 
 irb(main):001:0> exit
 $ irb
 irb(main):001:0> quit
@@ -84,14 +91,23 @@ irb(main):001:0> quit
 $ python
 >>> exit
 Use exit() or Ctrl-D (i.e. EOF) to exit
-{% endhighlight %}
-        <p>Ruby 可以用 <code>exit</code> 和 <code>quit</code>，來回應程式設計師的需求，也就是想離開互動終端。另一方面 Python，迂腐地告訴程式設計師如何做該做的事，即便 Python 已經知道程式設計師想幹嘛（卻只顯示錯誤訊息）。這個非常清晰短小的例子說明了最小驚訝原則。</p>
+        {% endhighlight %}
+        <p>Ruby 可以用
+          <code>exit</code>
+          和
+          <code>quit</code>，來回應程式設計師的需求，也就是想離開互動終端。另一方面 Python，迂腐地告訴程式設計師如何做該做的事，即便 Python 已經知道程式設計師想幹嘛（卻只顯示錯誤訊息）。這個非常清晰短小的例子說明了最小驚訝原則。</p>
         <p>最小驚訝原則最終在 Ruby 社群失寵的原因非常直觀。最小驚訝原則，驚訝誰？那當然是 Matz 了，以及跟 Matz 對同樣事物感到驚訝的人。Ruby 社群成長茁壯的同時，人們對不同的事情感到驚訝，跟 Matz 成長過程中感到驚訝的事情不一樣，這主要咎因於失敗的郵件論壇。為了要避免更多甲男對乙物是否感到吃驚的爭論沒完沒了，所以這個理念從此退居幕後。</p>
         <p>再一次，這跟 Rails 到底有什麼關係？嗯，Rails 就是按照相似的理念，盡量不驚訝（Matz）而設計，以及（DHH 的）燦爛微笑理念，這理念就是：框架的 API，設計時著重考量，如何可以讓人用起來會心一笑。我寫下此句時，即便是我自己，也覺得這第一次聽起來肯定非常的滑稽與自戀。</p>
         <p>但創造出像是 Ruby 或 Rails 這樣的成果，本身就是深度自戀的努力成果。Ruby 與 Rails 都是誕生於單一創造者。但也許我只是在這把我的動機投射在 Matz 身上，所以讓我縮小我宣言的範疇：我發明 Rails 只是為了我自己。從最初開始就是為了讓我自己微笑。Rails 的許多工具，很多方面來看，他們的用途都是為了讓我更加享受人生。充實每天為需求所爭論不休的生活，以及用來打造 Web 資訊系統。</p>
         <p>和 Matz 一樣，我有時候為了實現我的理念，也會做出一些蠢事。一個例子便是 Inflector，一個可以對英文做不規則轉換的類別，譬如 Person 類對應到 People 表、Analysis 對應到 Analyses，Comment 對應到 Comments 等。這現在已經是 Rails 不可切割的元素，但早期爭議的怒火延燒到今日，傷口到現在還在癒合，由此可見其重要性。</p>
-        <p>另一個例子只用了些許程式碼實現，卻幾乎引發了驚愕的程度。<code>Array#second</code> 到 <code>#fifth</code>（以及挑釁意味的 <code>#forty_two</code>）。這些別名的存取器，非常嚴重的冒犯了常發表意見的支持者，說：這簡直太超過了（幾乎是程式設計文明時代的結束），這不就寫作 <code>Array#[1]</code>、<code>Array#[2]</code>（以及 <code>Array[41]</code>）就好了嘛。</p>
-        <p>但時至今日，主要的抉擇還是，讓我自己開心。我喜歡在終端或測試裡撰寫 <code>people.third</code>。不，這不合理，也不高效。可能我有病吧，但這仍讓我發自內心的微笑，滿足了這個理念，也豐富了我的人生，幫我在過了 12 年之後，仍繼續參與 Rails。</p>
+        <p>另一個例子只用了些許程式碼實現，卻幾乎引發了驚愕的程度。<code>Array#second</code>
+          到
+          <code>#fifth</code>（以及挑釁意味的
+          <code>#forty_two</code>）。這些別名的存取器，非常嚴重的冒犯了常發表意見的支持者，說：這簡直太超過了（幾乎是程式設計文明時代的結束），這不就寫作
+          <code>Array#[1]</code>、<code>Array#[2]</code>（以及
+          <code>Array[41]</code>）就好了嘛。</p>
+        <p>但時至今日，主要的抉擇還是，讓我自己開心。我喜歡在終端或測試裡撰寫
+          <code>people.third</code>。不，這不合理，也不高效。可能我有病吧，但這仍讓我發自內心的微笑，滿足了這個理念，也豐富了我的人生，幫我在過了 12 年之後，仍繼續參與 Rails。</p>
         <p>不像優化效能有明確的指標，優化幸福很難量測。這使得優化幸福變成了不科學的無謂努力，某些人要不是徹底失望，可能就是覺得這並不怎麼重要。程式設計師被教導要爭執並征服實際的東西，也就是可以明確指出，為什麼甲比乙好的東西。</p>
         <p>但追求幸福，是很難從微觀的角度來量測，但從宏觀的角度來看便很清楚。許多人留在 Ruby on Rails 社群便是這個原因。他們自豪於更好，更圓滿的工作生活。而正是因為這些感情因素，勝利是很清楚的。</p>
         <p>總結，追求幸福可能是形成 Ruby on Rails 的關鍵要素。而這，會跟著 Rails 一直走下去。</p>
@@ -106,9 +122,19 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
       <div class="text__content common-content">
         <h3 id="convention-over-configuration">約定優於配置</h3>
         <p>早期 Rails 的生產力座右銘是：「你不是獨一無二的，大家都一樣」。只要放下了自負的個人喜好，便可以跳過無謂的世俗決定，而只在最重要的地方下更快的決定。</p>
-        <p>真的有人在乎資料庫主鍵的名稱嗎？用 <code>id</code>、<code>postID</code>、<code>posts_id</code> 或 <code>pid</code>，真的有差別嗎？這真的值得反覆討論嗎？不！</p>
+        <p>真的有人在乎資料庫主鍵的名稱嗎？用
+          <code>id</code>、<code>postID</code>、<code>posts_id</code>
+          或
+          <code>pid</code>，真的有差別嗎？這真的值得反覆討論嗎？不！</p>
         <p>Rails 部分使命就是，幫開發者在為 Web 打造資訊系統，日漸複雜龐大的決策叢林中披荊斬棘。有幾千個無謂的決策只需要做一次，而若是別人幫你做這些決定，那就更好了。</p>
-        <p>約定優於配置，將我們從各種小的決定中解放出來，也提供一個繁茂的草原，讓我們蘊育更深層的抽象。如果我們可以仰賴 <code>Person</code> 類別對應到 <code>people</code> 資料表，我們可以用同樣的詞形變化，來從 <code>has_many :people</code> 推論出，類別是 <code>Person</code>。優良約定的力量是廣泛使用能獲得許多好處。</p>
+        <p>約定優於配置，將我們從各種小的決定中解放出來，也提供一個繁茂的草原，讓我們蘊育更深層的抽象。如果我們可以仰賴
+          <code>Person</code>
+          類別對應到
+          <code>people</code>
+          資料表，我們可以用同樣的詞形變化，來從
+          <code>has_many :people</code>
+          推論出，類別是
+          <code>Person</code>。優良約定的力量是廣泛使用能獲得許多好處。</p>
         <p>除了專家的生產力提昇了以外，約定也降低了新手的門檻。Rails 裡有非常多的約定，新手不用知道，但卻能從中獲益。不需要了解，每一件事情為什麼是這樣，也可以打造出偉大的應用。</p>
         <p>但框架要是只是厚重的教科書就不可能了，新的應用好比一張白紙。單單是要理解從那開始，如何起步，就需要花費巨大的努力。一半的時間都花在糾結，究竟該拉那條線才是正確的。</p>
         <p>同樣的道理也可以套用在，當你了解了所有部件是如何一起工作時。當每一個改變的下一步非常明確時，我們可以快速的遊走在應用相似或與其它應用相同的部件之間。一個包含了所有東西的地方，所有東西都在一個地方。即便是最有能的人，也可以從約束中解放出來。</p>
@@ -132,9 +158,12 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         <p>這個問題跟在餐廳要吃什麼類似。像是挑選八道菜的每一道，選擇每一個函式庫或框架，這不是獨立的決定。選菜需要根據今晚的狀況來考慮，挑選函式庫則要考量整個系統。</p>
         <p>所以 Rails 我們根據大局考量，把選擇減少到一套好的工具，讓每個程式設計師可以從中挑選：一套為了大家好的工具。好處如下：</p>
         <ol>
-          <li><strong>分散風險</strong>：當大家都用預設的方式來使用 Rails，我們有共同的體驗。這共同基礎讓我們可以更容易教導和幫助新人。有討論的共同基礎。就好比大家昨天晚上七點都看過某個節目，所以明天大家有共同的話題可以談論。進而培養出更強凝聚力的社群。</li>
-          <li><strong>大家熟練使用相同的基礎工具</strong>：身為一個全棧的框架，Rails 有很多可以移動的部件，這些部件如何一起工作？如何獨立工作？兩者同樣重要。多數軟體開發的痛苦不是來自於獨立的部件，而是部件之間的互動。當我們用同樣的方式來使用這些部件，相同的配置便可得出相同的錯誤，則大家受的苦便減少了。</li>
-          <li><strong>有必要時也可以換掉</strong>：Rails 是主廚精選的技術棧，某些子框架或函式庫你仍保有選擇權。只是你不一定要換掉，這些決策可以之後再做，在你開發出一個明確的，需要不一樣的個人化應用時再來考慮吧。</li>
+          <li>
+            <strong>分散風險</strong>：當大家都用預設的方式來使用 Rails，我們有共同的體驗。這共同基礎讓我們可以更容易教導和幫助新人。有討論的共同基礎。就好比大家昨天晚上七點都看過某個節目，所以明天大家有共同的話題可以談論。進而培養出更強凝聚力的社群。</li>
+          <li>
+            <strong>大家熟練使用相同的基礎工具</strong>：身為一個全棧的框架，Rails 有很多可以移動的部件，這些部件如何一起工作？如何獨立工作？兩者同樣重要。多數軟體開發的痛苦不是來自於獨立的部件，而是部件之間的互動。當我們用同樣的方式來使用這些部件，相同的配置便可得出相同的錯誤，則大家受的苦便減少了。</li>
+          <li>
+            <strong>有必要時也可以換掉</strong>：Rails 是主廚精選的技術棧，某些子框架或函式庫你仍保有選擇權。只是你不一定要換掉，這些決策可以之後再做，在你開發出一個明確的，需要不一樣的個人化應用時再來考慮吧。</li>
         </ol>
         <p>因為多數使用 Rails，有經驗的程式設計師，不是都討厭菜單上的每一道（討厭的話就不會繼續使用 Rails 了）。他們努力挑選想要的替代方案，而其它則享受跟大家一樣的工具。</p>
       </div>
@@ -173,18 +202,32 @@ Use exit() or Ctrl-D (i.e. EOF) to exit
         <p>我們寫程式，不只是要讓計算機或其他人理解，而是要沐浴在優美的夕陽餘暉裡。看起來漂亮的程式碼，本身就有價值，要盡力追尋。但這不代表優美的程式碼，就該勝於一切的考量，而是要把優美納入優先考量。</p>
         <p>優美的程式碼是什麼？在 Ruby，通常交會於 Ruby 本身的慣用式和自定的 DSL 威力之間。這是一條模糊的分界線，但非常值得一試。</p>
         <p>以下是一個取自 Active Record 的簡單範例：</p>
-{% highlight ruby %}
-class Project < ApplicationRecord
+        {% highlight ruby %}
+          class Project < ApplicationRecord 
   belongs_to :account
   has_many :participants, class_name: 'Person'
   validates_presence_of :name
 end
-{% endhighlight %}
+        {% endhighlight %}
         <p>這看起來像是 DSL，但這只是一個類別定義，其中有三句類別方法呼叫，方法呼叫接受符號及選項參數。沒什麼特別的，但這很漂亮。這也很簡單。只消幾行宣告，便賦予了我們碩大的能力與彈性。</p>
-        <p>這幾條語句部分的美麗，來自於履行先前的理念，像是約定優於配置。當我們使用 <code>belongs_to :account</code> 時，我們假設 <code>projects</code> 表有一個叫做 <code>account_id</code> 的外鍵存在。當我們把 <code>participants</code> 的關聯類別，用 <code>class_name</code> 指定為 <code>Person</code> 時，我們只需要定義 <code>Person</code> 類別就可以了。從這條語句便可以推出外鍵以及其它需要的設定。</p>
+        <p>這幾條語句部分的美麗，來自於履行先前的理念，像是約定優於配置。當我們使用
+          <code>belongs_to :account</code>
+          時，我們假設
+          <code>projects</code>
+          表有一個叫做
+          <code>account_id</code>
+          的外鍵存在。當我們把
+          <code>participants</code>
+          的關聯類別，用
+          <code>class_name</code>
+          指定為
+          <code>Person</code>
+          時，我們只需要定義
+          <code>Person</code>
+          類別就可以了。從這條語句便可以推出外鍵以及其它需要的設定。</p>
         <p>以下是取自資料庫 Migration 的另一個範例：</p>
-{% highlight ruby %}
-class CreateAccounts < ActiveRecord::Migration
+        {% highlight ruby %}
+          class CreateAccounts < ActiveRecord::Migration 
   def change
     create_table :accounts do |t|
       t.integer :queenbee_id
@@ -192,16 +235,24 @@ class CreateAccounts < ActiveRecord::Migration
     end
   end
 end
-{% endhighlight %}
-        <p>這是框架威力的精華所在。程式設計師按照某種約定來宣告一個類別，像是繼承自 <code>ActiveRecord::Migration</code> 並實現 <code>#change</code> 方法，剩下的交給框架來處理，什麼該去那裡，該呼叫那個方法。</p>
-        <p>這讓程式設計師只要寫很少的程式碼。就 <code>Migration</code> 的例子來說，就這樣一個檔案加 <code>rails db:migrate</code> 就可以把資料庫升級、新增一張表；反過來也可以用另一條命令來移掉一張表。這跟程式設計師自己使用所有背後的函式庫，搞定所有細節很不一樣。</p>
+        {% endhighlight %}
+        <p>這是框架威力的精華所在。程式設計師按照某種約定來宣告一個類別，像是繼承自
+          <code>ActiveRecord::Migration</code>
+          並實現
+          <code>#change</code>
+          方法，剩下的交給框架來處理，什麼該去那裡，該呼叫那個方法。</p>
+        <p>這讓程式設計師只要寫很少的程式碼。就
+          <code>Migration</code>
+          的例子來說，就這樣一個檔案加
+          <code>rails db:migrate</code>
+          就可以把資料庫升級、新增一張表；反過來也可以用另一條命令來移掉一張表。這跟程式設計師自己使用所有背後的函式庫，搞定所有細節很不一樣。</p>
         <p>有時候優美的程式反而更玄乎。不是要追求寫得多短多短，或是有多厲害，更重要的是讀起來的節奏感：</p>
         <p>以下兩條語句等價：</p>
-{% highlight ruby %}
-if people.include? person
+        {% highlight ruby %}
+          if people.include? person 
 ...
 if person.in? people
-{% endhighlight %}
+        {% endhighlight %}
         <p>但執行流程與關注的地方有著微妙的不同。第一個語句，關注的是群體是否有特定的人。第二個語句則是人是否屬於群體。兩條語句都差不多長，但我主張第二條語句更美，能讓我在想出這條件式考量的是人的時候，更容易有種會心一笑的感覺。</p>
       </div>
     </div>
@@ -215,14 +266,27 @@ if person.in? people
         <h3 id="provide-sharp-knives">提供實用工具</h3>
         <p>Ruby 本身就有許多實用的工具，不是碰巧，設計正是如此。最出名的就是 Monkey Patching：可以修改類別與方法的能力。</p>
         <p>但這個能力很快被嘲諷說，一般的程式設計師掌握不了。而從限制性較嚴格的語言陣營人們認為，Ruby 這個功能盲目的信任程式設計師，Ruby 是註定是要失敗的。</p>
-        <p>什麼都可以改變的話，又怎麼能阻止你把 <code>String#capitalize</code> 從本來的 <code>"something bold".capitalize</code> 改成 <code>"Something Bold"</code> 而不是本來的 <code>"Something bold"</code> 呢？這在你自己的應用上可能沒問題，但這就把其它倚賴 <code>String#capitalize</code> 的函式庫都搞壞了。</p>
+        <p>什麼都可以改變的話，又怎麼能阻止你把
+          <code>String#capitalize</code>
+          從本來的
+          <code>"something bold".capitalize</code>
+          改成
+          <code>"Something Bold"</code>
+          而不是本來的
+          <code>"Something bold"</code>
+          呢？這在你自己的應用上可能沒問題，但這就把其它倚賴
+          <code>String#capitalize</code>
+          的函式庫都搞壞了。</p>
         <p>有人說禁止使用才是答案。在 Ruby 裡，只要有好的理由，沒有什麼可以阻止你使用這個功能。我們透過約定、推廣、教育來宣導好的觀念，而不是禁止使用廚房的菜刀，一定要規定每個人只能用湯匙來切番茄。</p>
-        <p>但 Monkey Patching 的反面是能夠做出 <code>2.days.ago</code>（回傳兩天前到現在的日期）這樣的美技。你可能會覺得，噢，這交易真不划算。也就是你寧願不要 <code>2.days.ago</code>，也不想修改語言的核心類別，若你這麼想的話，那 Ruby 可能不適合你。</p>
+        <p>但 Monkey Patching 的反面是能夠做出
+          <code>2.days.ago</code>（回傳兩天前到現在的日期）這樣的美技。你可能會覺得，噢，這交易真不划算。也就是你寧願不要
+          <code>2.days.ago</code>，也不想修改語言的核心類別，若你這麼想的話，那 Ruby 可能不適合你。</p>
         <p>但有些人出自於安全性的考量，不得以只好放棄修改 Ruby 的核心類別。但反方面來說，語言活躍的原因，正是因為給程式設計師提供了激進不同的觀點：同時也相信可以放心的把工具交給程式設計師使用。</p>
         <p>不只是相信，語言本身也用多種方法，來教導我們使用這些有用的工具。如此一來我們可以把整個產業向上提昇，透過假設多數的程式設計師都想更進步，大家都能使用好的工具，而不傷害到自己。這真是一個鼓舞人心的想法啊，但這有悖於大部分程式設計師對其他同僚的想法。</p>
         <p>在決定實用工具的價值時，總得以大家為出發點來討論。我尚未聽到任何一個程式設計師說，「我無法相信這股力量，請把它拿走！」。常常聽到則是「我想其他的程式設計師會濫用這個」。但我從來就不喜歡這種家長式的作風。</p>
         <p>這正是 Rails 要提供實用工具的原因。框架所提供的工具不僅和語言所提供的工具同樣實用，也很銳利。我們不為提供這些工具而感到抱歉。事實上，我們應該要慶祝我們有足夠的信心，來啟發下一代的程式設計師，有勇氣相信他們。</p>
-        <p>許多 Rails 的功能常常飽受這樣的爭議：「太過自由」。但我現在想到的一個例子是 <a href="https://github.com/rails/rails/blob/master/activesupport/lib/active_support/concern.rb">Concern 這個功能</a>。這是基於 Ruby 內建功能 Module 之上的一層，薄薄的語法糖。為了單一類別打造，可以用來封裝多個相關卻又可獨立理解的「關係」（也正是 Concern 名字的由來）。</p>
+        <p>許多 Rails 的功能常常飽受這樣的爭議：「太過自由」。但我現在想到的一個例子是
+          <a href="https://github.com/rails/rails/blob/master/activesupport/lib/active_support/concern.rb">Concern 這個功能</a>。這是基於 Ruby 內建功能 Module 之上的一層，薄薄的語法糖。為了單一類別打造，可以用來封裝多個相關卻又可獨立理解的「關係」（也正是 Concern 名字的由來）。</p>
         <p>對於 Concern 的指控是有了一組新的抽屜，讓程式設計師很容易把物件都塞進去。這說得沒錯，Concern 的用途就像這樣。</p>
         <p>但謬論是不要提供像是 Concern 的功能，但只要是有點能力的人來使用 Concern，便可得出有說服力的概念分離，程式設計師可以從 Concern 獲得先天上架構的優勢。這麼說吧，如果你不能保持 Concern 的整潔，那你也不可能寫出單支優雅的程式。</p>
         <p>尚未學會使用這些實用工具的程式設計師，嚐不到收穫的果實。這裡有一個重要的單字：「尚未」。我相信每個程式設計師，都有自己的一條道，最終將變成有能力的 Ruby 與 Rails 程式設計師。有能力我是指有足夠的知識，知道何時，以及該怎麼根據場景來使用不同的工具，有時甚至得使用危險的工具。</p>
@@ -238,7 +302,8 @@ if person.in? people
     <div class="text__body">
       <div class="text__content common-content">
         <h3 id="integrated-systems">重視整合系統</h3>
-        <p>Rails 可以在很多場景下使用，但最初是用來做整合系統的 <a href="https://m.signalvnoise.com/the-majestic-monolith-29166d022228#.umpdeapqa">Majestic Monolith</a>！Majestic Monolith 即用一個系統來解決所有問題。這表示 Rails 從需要做即時刷新的前端 JavaScript，到資料庫如何在生產環境遷移一個版本，都要納入考量。</p>
+        <p>Rails 可以在很多場景下使用，但最初是用來做整合系統的
+          <a href="https://m.signalvnoise.com/the-majestic-monolith-29166d022228#.umpdeapqa">Majestic Monolith</a>！Majestic Monolith 即用一個系統來解決所有問題。這表示 Rails 從需要做即時刷新的前端 JavaScript，到資料庫如何在生產環境遷移一個版本，都要納入考量。</p>
         <p>我們已經談過，這是多麼廣闊的眼界。但對於一人團隊來說，不過就是現實的考量而已。Rails 特別尋找通才來打造整個系統。目的不是要把專家束之高閣，而是讓通才和專家合力，打造出更具長遠價值的系統。</p>
         <p>讓一個人可以做更多的事情，才想出了整合系統。而正是在整合系統裡，我們可以拿掉許多不必要的抽象，減少抽象層之間的重複（像是 Server 端與 Client 端可以共用模版），以及避免系統在非必要的情況下分離。</p>
         <p>系統開發的複雜度多半是引入了系統部件之間的界限，比如限制甲部件該如何和乙部件互相調用。本地物件之間的方法呼叫，遠比 Microservices 之間的遠端程序呼叫要來得簡單。Microservices 是另一個存在失敗狀態、延遲問題、相依更新週期的新世界，等著讓想嘗試拆分服務的人去冒險。</p>
@@ -264,7 +329,11 @@ if person.in? people
         <p>這些工作不只有 Rails 需要，廣大的 Ruby 社群也需要。Rails 應該站在時代的前沿，透過帶領人們快速升級新版，來幫助 Ruby 演進。</p>
         <p>這一點我們做的非常好。最早開始時，我們從 Ruby 1.6、1.7、1.8、1.9、2.0、2.1、2.2 一路升上 2.3。沿路歷經多次的大版本更新，但 Ruby 總是有 Rails 當後盾，並幫助每個人的程式跑的更快。這是身為最流行的 Ruby 專案 Rails 的特權，同時也是義務。</p>
         <p>這點也可以延伸到工具鏈的輔助工具。Bundler 曾是一個爭議性的概念，但透過 Rails 的不懈努力，Bundler 成了未來的重要工具，今天理所當然已經是不可或缺的工具了。同樣也可以應用到 Asset Pipeline 跟 Spring（常駐的指令進程）。這三個一起出現，也仍然一起往前走，過程中可能造成了一些痛苦，但長遠下來，這些工具提供的價值正是為什麼我們要推廣他們的原因。</p>
-        <p>最終進步的是人，以及人們樂意做出改變。這也是為什麼，像 <a href="/community#core">Rails Core</a> 或 <a href="/community#committers">Rails Committers</a> 這樣的團隊裡沒有終身職位。這兩個團隊是給活躍致力於帶動框架進步的那群人。對某些人來說，可能就幾年，但我們永遠感激他們的付出奉獻，這些奉獻可能持續影響著我們幾十年。</p>
+        <p>最終進步的是人，以及人們樂意做出改變。這也是為什麼，像
+          <a href="/community#core">Rails Core</a>
+          或
+          <a href="/community#committers">Rails Committers</a>
+          這樣的團隊裡沒有終身職位。這兩個團隊是給活躍致力於帶動框架進步的那群人。對某些人來說，可能就幾年，但我們永遠感激他們的付出奉獻，這些奉獻可能持續影響著我們幾十年。</p>
         <p>而這也是為什麼對我們來說，有一個鼓舞社群新成員的友好環境非常重要。我們需要新血與新概念，才可以激盪出更好的進步。</p>
       </div>
     </div>
