Lot's of changes

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@ id: home
   <div class="container">
     <div class="heading__body">
       <div class="heading__headline common-headline">
-        <h1>Compress the complexity of modern web apps.</h1>
-        <h4>Learn just what you need to get started, then keep leveling up as you go. <strong>Ruby on Rails scales from
-            HELLO WORLD to IPO.</strong></h4>
+        <h1>Find the perfect place to live</h1>
+        <h4>jobs, schools, neighborhoods, housing<strong>—all in one place.</strong></h4>
       </div>
 
       {% if site.data.version.label %}
 
       <div class="heading__button">
-        <a href="{{ site.data.version.url }}" class="common-button common-button--version"><span>{{
-            site.data.version.label }}{% if site.data.version.date %} &mdash; released {{ site.data.version.date }}{%
-            endif %}</span></a>
+        <a href="{{ site.data.version.url }}" class="common-button common-button--version">
+          <span>
+            🔓 Unlock Your Future Destination
+          </span>
+        </a>
       </div>
 
       {% endif %}
@@ -28,7 +29,7 @@ id: home
 <div class="video common-background--grey common-shape--top-white-down-left">
   <div class="container">
     <div class="video__embed">
-      <video poster="/assets/videos/rails7-screencast-poster.jpg" width="1920" height="1080" controls>
+      <video poster="/assets/images/dashboard.png" width="1920" height="1080" controls>
         <source src="https://d1snj8sshb5u7m.cloudfront.net/Rails7.mp4" type="video/mp4">
         <track kind="captions" label="English" src="/assets/videos/rails7-screencast-english.vtt" srclang="en"
           default="false">
