Fix trailing slash issue on world page

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -2,6 +2,8 @@
 title: The Rails Foundation
 description:
 permalink: /foundation
+redirect_from:
+  - /foundation/
 ---
 
 <div class="heading common-padding--bottom common-padding--top-small">
