--- a/_pages/features.html
+++ b/_pages/features.html
@@ -2,9 +2,7 @@
 title: Features
 description:
 permalink: /features
-redirect_from:
-  - /features/
-published: false
+published: true
 ---
 
 <div class="heading common-padding--bottom common-padding--top-small">
