Add korean doctrine
Add korean doctrine

Add korean doctrine

Update link for korean doctrine

Add korean doctrine

Update Korean doctrine content and wording

Change 마츠 to Matz

--- a/doctrine/de.html
+++ b/doctrine/de.html
@@ -50,6 +50,9 @@ redirect_from:
             <li>
               <a href="/doctrine/zh_tw"><span>繁體中文</span></a>
             </li>
+            <li>
+              <a href="/doctrine/ko"><span>Korean</span></a>
+            </li>
           </ul>
         </div>
       </div>
