--- a/doctrine/zh_cn.html
+++ b/doctrine/zh_cn.html
@@ -29,6 +29,7 @@ redirect_from:
             <li><a href="/doctrine/fr"><span>Français</span></a></li>
             <li><a href="/doctrine/ru"><span>Russian</span></a></li>
             <li><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
+            <li><a href="/doctrine/ko"><span>Korean</span></a></li>
           </ul>
         </div>
       </div>
