--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -30,6 +30,7 @@ redirect_from:
             <li><a href="/doctrine/fr"><span>Français</span></a></li>
             <li><a href="/doctrine/ru"><span>Russian</span></a></li>
             <li><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
+            <li><a href="/doctrine/ko"><span>Korean</span></a></li>
           </ul>
         </div>
       </div>
