Improve maintenance page

--- a/_pages/maintenance.html
+++ b/_pages/maintenance.html
@@ -11,7 +11,7 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>Maintenance policy.</h1>
-        <h4><strong>Support is divided into three groups:</strong> new features, bug fixes, and security issues, and severe security issues.</h4>
+        <h4><strong>Support is divided into three groups:</strong> new features, bug fixes, and security issues.</h4>
       </div>
     </div>
   </div>
@@ -25,8 +25,7 @@ redirect_from:
         <p>We aim to release a version containing new features every six months. In the rare case where
           no release was made in one year, we will extend the support period for the previous release
           until the next release is made.</p>
-        <hr class="divider" />
-        <h3 id="bug_fixes">Bug Fixes</h3>
+        <h3 id="bug-fixes">Bug Fixes</h3>
         <p>Minor releases will receive bug fixes for one year after the first release in
           its series. For example, if a theoretical 1.1.0 is released on January 1, 2023, it
           will receive bug fixes until January 1, 2024. After that, it will be considered
@@ -37,7 +36,6 @@ redirect_from:
           <li><strong>7.1.x</strong> - Supported until October 1, 2024</li>
           </li>
         </ul>
-        <hr class="divider" />
         <h3 id="security">Security Issues</h3>
         <p>
           Minor releases will receive security fixes for two years after the first release in
@@ -52,9 +50,10 @@ redirect_from:
           <li><strong>7.0.x</strong> - Supported until April 1, 2025</li>
           <li><strong>6.1.x</strong> - Supported until October 1, 2024</li>
         </ul>
-        <hr class="divider" />
         <h3 id="unsupported">Unsupported Release Series</h3>
         <p>When a release series is no longer supported, it’s your own responsibility to deal with bugs and security issues. We may provide backports of the fixes and publish them to git, however there will be no new versions released. If you are not comfortable maintaining your own versions, you should upgrade to a supported version.</p>
+        <hr class="divider" />
+        <p>You can read the <a href="https://guides.rubyonrails.org/maintenance_policy.html" title="Rails maintenance policy">full policy in the Rails guides</a>.</p>
       </div>
     </div>
   </div>
