Add th in language list

--- a/doctrine/de.html
+++ b/doctrine/de.html
@@ -45,6 +45,9 @@ redirect_from:
               <li lang="ru">
                 <a href="/doctrine/ru"><span>Russian</span></a>
               </li>
+              <li>
+                <a href="/doctrine/th"><span>ไทย</span></a>
+              </li>
               <li lang="zh-CN">
                 <a href="/doctrine/zh_cn"><span>简体中文</span></a>
               </li>
