--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -31,6 +31,7 @@ redirect_from:
               <li lang="es"><a href="/doctrine/es"><span>Español</span></a></li>
               <li lang="fr"><a href="/doctrine/fr"><span>Français</span></a></li>
               <li lang="ru"><a href="/doctrine/ru"><span>Russian</span></a></li>
+              <li lang="th"><a href="/doctrine/th"><span>ไทย</span></a></li>
               <li lang="zh-CN"><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
             </ul>
           </div>
