--- a/doctrine/zh_cn.html
+++ b/doctrine/zh_cn.html
@@ -29,6 +29,7 @@ redirect_from:
               <li lang="es"><a href="/doctrine/es"><span>Español</span></a></li>
               <li lang="fr"><a href="/doctrine/fr"><span>Français</span></a></li>
               <li lang="ru"><a href="/doctrine/ru"><span>Russian</span></a></li>
+              <li lang="th"><a href="/doctrine/th"><span>ไทย</span></a></li>
               <li lang="zh-TW"><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
             </ul>
           </div>
